iptables
# Generated by iptables-save v1.4.7 on Sat Nov 30 00:40:12 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [569:80732]
:ALLTHETHINGS - [0:0]
:HADOOP - [0:0]
:HBASE - [0:0]
:MAPREDUCE - [0:0]
:YARN - [0:0]
:ZOOKEEPER - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -p udp -m udp --sport 123 --dport 123 -j ACCEPT 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j HADOOP 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j MAPREDUCE 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j YARN 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j ZOOKEEPER 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j HBASE 
-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j ALLTHETHINGS 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A ALLTHETHINGS -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8020 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50090 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50010 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50075 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50020 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50070 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50475 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50470 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50100 -j ACCEPT 
-A HADOOP -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 50105 -j ACCEPT 
-A HBASE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 60000 -j ACCEPT 
-A HBASE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 60010 -j ACCEPT 
-A HBASE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 60020 -j ACCEPT 
-A HBASE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 60030 -j ACCEPT 
-A HBASE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8080 -j ACCEPT 
-A MAPREDUCE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 13562 -j ACCEPT 
-A MAPREDUCE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 10020 -j ACCEPT 
-A MAPREDUCE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 19888 -j ACCEPT 
-A MAPREDUCE -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m multiport --dports 51000:51100 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8032 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8030 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8088 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8090 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8031 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8033 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 8042 -j ACCEPT 
-A YARN -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 51101 -j ACCEPT 
-A ZOOKEEPER -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 2181 -j ACCEPT 
-A ZOOKEEPER -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 2888 -j ACCEPT 
-A ZOOKEEPER -s 192.168.1.0/24 -d 192.168.1.0/24 -p tcp -m tcp --dport 3888 -j ACCEPT 
COMMIT
# Completed on Sat Nov 30 00:40:12 2013
